--- a/src/main/webapp/WEB-INF/views/home.mustache
+++ b/src/main/webapp/WEB-INF/views/home.mustache
@@ -1,48 +1,6 @@
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-<%@ taglib prefix="fmt" uri="http://java.sun.com/jsp/jstl/fmt" %>
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Bootstrap Example</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</head>
-<body>
-
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/">MALL</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="mynavbar">
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">상품목록</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/product">상품등록</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/seller/list">판매자목록</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/seller">판매자등록</a>
-                </li>
-            </ul>
-            <form class="d-flex">
-                <input class="form-control me-2" type="text" placeholder="Search">
-                <button class="btn btn-primary" type="button">Search</button>
-            </form>
-        </div>
-    </div>
-</nav>
+{{> /layout/header}}
 <div class="container mt-3">
-    <%--select 결과가 나올, table이 필요하다.--%>
+    <!--select 결과가 나올, table이 필요하다.-->
         <table class="table table-hover">
         <thead>
         <tr>
@@ -57,7 +15,7 @@
         </thead>
         <tbody>
            {{#productList}}
-                <%-- ${} 안에 들어가는 것은 name명 쓰기--%>
+                <!-- ${} 안에 들어가는 것은 name명 쓰기-->
                 <tr>
                     <td>{{id}}</td>
                     <td><a href="/product/{{id}}"> {{name}}</a></td>
@@ -66,7 +24,7 @@
                     <td><fmt:formatDate value="{{createdAt}}" pattern="yyyy-MM-dd HH:mm" /></td>
                     <td>{{seller.id}}</td>
                     <td><a href="/seller/product/{{seller.id}}"> {{seller.name}}</a></td>
-<%--                    seller.id에 맞춰서 출력이 되어야 된다.--%>
+<!--                    seller.id에 맞춰서 출력이 되어야 된다.-->
                 </tr>
             {{/productList}}
         </tbody>
