기능 구현 완료

--- a/src/main/resources/templates/home.mustache
+++ b/src/main/resources/templates/home.mustache
@@ -21,7 +21,7 @@
                     <td><a href="/product/{{id}}"> {{name}}</a></td>
                     <td>{{price}}원</td>
                     <td>{{qty}}개</td>
-                    <td><fmt:formatDate value="{{createdAt}}" pattern="yyyy-MM-dd HH:mm" /></td>
+                    <td>{{createdAt}}</td>
                     <td>{{seller.id}}</td>
                     <td><a href="/seller/product/{{seller.id}}"> {{seller.name}}</a></td>
 <!--                    seller.id에 맞춰서 출력이 되어야 된다.-->
