--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -21,13 +21,13 @@
                     <a class="nav-link" href="/">상품목록</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/product">상품등록</a>
+                    <a class="nav-link" href="/product/savePage">상품등록</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/seller/list">판매자목록</a>
+                    <a class="nav-link" href="/seller">판매자목록</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/seller">판매자등록</a>
+                    <a class="nav-link" href="/seller/savePage">판매자등록</a>
                 </li>
             </ul>
             <form class="d-flex">
