--- a/src/main/resources/templates/product/product.mustache
+++ b/src/main/resources/templates/product/product.mustache
@@ -1,6 +1,7 @@
 {{> layout/header}}
+
 <div class="container mt-3">
-    <form action="/product/insert" method="post" enctype="application/x-www-form-urlencoded">
+    <form action="/product/save" method="post" enctype="application/x-www-form-urlencoded">
         <div class="mb-3 mt-3">
             <input type="text" class="form-control" placeholder="Enter 상품명" value="" name="name">
         </div>
