--- a/src/main/resources/templates/error/ex40x.mustache
+++ b/src/main/resources/templates/error/ex40x.mustache
@@ -1,7 +1,7 @@
 {{> layout/header}}
 
 <div class="container mt-3">
-    <h1>이미 존재하는 데이터입니다.</h1>
+    <h1>잘못된 접근입니다.</h1>
 </div>
 </body>
 </html>
