--- a/src/main/resources/templates/seller/seller-list.mustache
+++ b/src/main/resources/templates/seller/seller-list.mustache
@@ -14,7 +14,7 @@
         {{#sellerList}}
         <tr>
             <td>{{id}}</td>
-            <td><a href="/seller/{{id}}">{{name}}</a></td>
+            <td><a href="seller/{{id}}">{{name}}</a></td>
             <td>{{email}}</td>
         </tr>
         {{/sellerList}}
